@@ -1,1 +1,4 @@
 # fsaetelemetry
+--module-path C:\javafx-sdk-21.0.2\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.swt
+
+Add to your IDE vm options
